Issue #17000: AvoidOutdatedUsageCheck: Use modern Java collections API (toList() instead of collect(Collectors.toList()))