@@ -19,6 +19,7 @@
 
 package com.puppycrawl.tools.checkstyle.checks.coding;
 
+import static com.google.common.truth.Truth.assertThat;
 import static com.puppycrawl.tools.checkstyle.checks.coding.AvoidOutdatedUsageCheck.MSG_OUTDATED_API_USAGE;
 
 import org.junit.jupiter.api.Test;
@@ -27,7 +28,7 @@ import com.puppycrawl.tools.checkstyle.AbstractModuleTestSupport;
 
 public class AvoidOutdatedUsageCheckTest extends AbstractModuleTestSupport {
 
-    public static final String TO_LIST = "Collectors.toList()";
+    public static final String TO_LIST = ".collect(Collectors.toList()) -> .toList()";
 
     @Override
     protected String getPackageLocation() {
@@ -37,23 +38,25 @@ public class AvoidOutdatedUsageCheckTest extends AbstractModuleTestSupport {
     @Test
     public void simple() throws Exception {
         final String[] expected = {
-            "17:9: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "18:20: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "19:43: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "16:9: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "17:20: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "18:43: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
         };
         verifyWithInlineConfigParser(getPath("InputAvoidOutdatedUsageSimple.java"), expected);
+        assertThat(new AvoidOutdatedUsageCheck().getRequiredTokens()).isNull();
     }
 
     @Test
     public void collectors() throws Exception {
         final String[] expected = {
-            "22:32: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "23:43: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "26:62: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "27:20: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "28:9: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
-            "40:31: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "21:32: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "22:43: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "25:62: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "26:20: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "27:9: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
+            "39:31: " + getCheckMessage(MSG_OUTDATED_API_USAGE, TO_LIST),
         };
-        verifyWithInlineConfigParser(getPath("InputAvoidOutdatedUsageForCollectors.java"), expected);
+        verifyWithInlineConfigParser(
+                getPath("InputAvoidOutdatedUsageForCollectors.java"), expected);
     }
 }
